# AILib

./: .gitignore  README  __init__.py  ailib.toml  main_cifar10.py  main_drag.py  main_iris.py  pyproject.toml  requirements.txt  setup.py  test1.py  test2.py  test5.py
ailib/dl/: layers.py  model.py  optimizer.py
ailib/graph_tree/: plot_tree.py
ailib/ml/: gini_index.py  tree.py
ailib/pars/cifar10/: train_errors.txt  weights 6-layer.txt
ailib/pars/digits/: train_errors.txt  valid_errors.txt
ailib/pars/iris/: train_errors.txt
ailib/utils/: __init__.py  create_train_test_cifar10.py  dbs.py  evaluate_tree.py  functions.py  my_random_forest.py
dl/: __init__.py  layers.py  model.py
graph_tree/: __init__.py
ml/: __init__.py  gini_index.py  naive_bayes.py  random_forest.py  tree.py
pars/cifar10/: bias 0-layer.txt  bias 2-layer.txt  bias 4-layer.txt  bias 6-layer.txt  valid_errors.txt  weights 1-layer.txt  weights 2-layer.txt  weights 4-layer.txt
pars/digits/: bias 0-layer.txt  bias 2-layer.txt  weights 0-layer.txt  weights 2-layer.txt
pars/drag/: bias 0-layer.txt  bias 2-layer.txt  train_errors.txt  valid_errors.txt  weights 0-layer.txt  weights 2-layer.txt
pars/iris/: bias 0-layer.txt  bias 2-layer.txt  valid_errors.txt  weights 0-layer.txt  weights 2-layer.txt
pars/pima/: bias 0-layer.txt  bias 2-layer.txt  bias 4-layer.txt  bias 8-layer.txt  valid_errors.txt  weights 8-layer.txt
test/: main_digits.py  main_pima.py  my_tree.py  test1.py
test/ml/: test1.py  test2.py  test3.py  test4.py
utils/: helpers.py  node.py
(+6 files in other folders)
