[build-system]
requires = ["setuptools"] # , "setuptools-scm"
build-backend = "setuptools.build_meta"

[project]
name = "AILib"
description = "AI library for educational reasons"
version = "0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version=="3.8.12"',
]

# [tool.setuptools]
# packages = ["my_package"]

[tool.setuptools.packages.find]
where = ["ailib", "test", "data", "pars"]  # list of folders that contain the packages (["."] by default)
# include = ["*"]  # package names should match these glob patterns (["*"] by default)
# exclude = ["test"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
